--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<h5 id="red">Test!</h5>
+<h5 id="red" onclick="alert('hi')">Test!</h5>
 <div id="pano"></div>
 
 <!-- Main -->
