--- a/vtour.html
+++ b/vtour.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+
     <link rel="stylesheet" href="css/vtour.css">
 </head>
 <body>
+<h5 id="red" onclick="alert('hi')">Test!</h5>
+<div id="pano"></div>
 
 <!-- Main -->
-<script src="./dist/index.bundle.js"></script>
+<script src="./dist/vtour.bundle.js"></script>
 </body>
 </html>
