--- a/vtour.html
+++ b/vtour.html
@@ -17,37 +17,24 @@
     <header>
         <div id="navBar">
             <div class="card z-depth-2 row" id="searchBar">
-                <input type="text" placeholder="In CBS Mannheim suchen">
+                <input type="text" placeholder="In CBS Mannheim suchen" id="searchBox">
                 <div id="buttonContainer">
                     <i class="fa fa-search" aria-hidden="true" title="Suchen"></i>
                     <i class="fa fa-location-arrow blue-text" title="Navigation"></i>
                 </div>
             </div>
-            <ul id="autoCompleteContainer">
-                <li class="autoComplete row">
-                    <i class="fa fa-map-marker"></i>
-                    <p>Raum 210</p>
-                </li>
-                <li class="autoComplete row">
-                    <i class="fa fa-map-marker"></i>
-                    <p>Raum 203</p>
-                </li>
-                <li class="autoComplete row">
-                    <i class="fa fa-map-marker"></i>
-                    <p>Raum 421</p>
-                </li>
-                <li class="autoComplete row">
-                    <i class="fa fa-map-marker"></i>
-                    <p>Raum 322</p>
-                </li>
-            </ul>
+            <ul id="autoCompleteContainer"></ul>
         </div>
     </header>
 
+    <!-- JQuery JS -->
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
     <!-- Main JS -->
     <script src="./dist/vtour.bundle.js"></script>
     <!-- Bootstrap core JS -->
     <script src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+    <!-- Popper JS -->
+    <script src="./node_modules/mdbootstrap/js/popper.min.js"></script>
     <!-- Material Design Bootstrap JS -->
     <script src="./node_modules/mdbootstrap/js/mdb.min.js"></script>
 </body>
