Added some stuff :oncoming_automobile:

--- a/vtour.html
+++ b/vtour.html
@@ -27,6 +27,29 @@
         </div>
     </header>
 
+    <main>
+        <div id="navSlider">
+            <div id="navHeader">
+                <div class="row">
+                    <i class="fa fa-times white-text fa-2x" id="navBarClose"></i>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <i class="fa fa-exchange white-text fa-2x fa-rotate-90"></i>
+                    </div>
+                    <div class="col-8">
+                        <input type="text" placeholder="Startpunkt" id="navStart">
+                        <input type="text" placeholder="Ziel" id="navDestination">
+                    </div>
+                    <div class="col-2">
+                        <i class="fa fa-exchange white-text fa-2x fa-rotate-90"></i>
+                    </div>
+                </div>
+            </div>
+            <ul id="autoCompleteContainerNav"></ul>
+        </div>
+    </main>
+
     <!-- JQuery JS -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <!-- Main JS -->
