Added Swap-Button support

--- a/vtour.html
+++ b/vtour.html
@@ -35,14 +35,13 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        <i class="fa fa-exchange white-text fa-2x fa-rotate-90"></i>
                     </div>
                     <div class="col-8">
                         <input type="text" placeholder="Startpunkt" id="navStart">
                         <input type="text" placeholder="Ziel" id="navDestination">
                     </div>
                     <div class="col-2">
-                        <i class="fa fa-exchange white-text fa-2x fa-rotate-90"></i>
+                        <i class="fa fa-exchange white-text fa-2x fa-rotate-90" id="swapButton"></i>
                     </div>
                 </div>
             </div>
