Slide-Out is now working ^^

--- a/vtour.html
+++ b/vtour.html
@@ -20,7 +20,7 @@
                 <input type="text" placeholder="In CBS Mannheim suchen" id="searchBox">
                 <div id="buttonContainer">
                     <i class="fa fa-search" aria-hidden="true" title="Suchen"></i>
-                    <i class="fa fa-location-arrow blue-text" title="Navigation"></i>
+                    <i class="fa fa-location-arrow blue-text" title="Navigation" id="navBarOpen"></i>
                 </div>
             </div>
             <ul id="autoCompleteContainer"></ul>
