Minor fixes, navbar styling

--- a/vtour.html
+++ b/vtour.html
@@ -29,14 +29,14 @@
 
     <main>
         <div id="navSlider">
-            <div id="navHeader">
+            <div id="navHeader" class="card">
                 <div class="row">
                     <i class="fa fa-times white-text fa-2x" id="navBarClose"></i>
                 </div>
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-1">
                     </div>
-                    <div class="col-8">
+                    <div class="col-9">
                         <input type="text" placeholder="Startpunkt" id="navStart">
                         <input type="text" placeholder="Ziel" id="navDestination">
                     </div>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <ul id="autoCompleteContainerNav"></ul>
+            <ul id="autoCompleteContainerNav" class="card"></ul>
         </div>
     </main>
 
