--- a/vtour.html
+++ b/vtour.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <title>CBS Tour</title>
 
     <!-- Bootstrap core CSS -->
