--- a/vtour.html
+++ b/vtour.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <div id="navBar">
+        <div id="navBar" class="card">
             <div class="card z-depth-2 row" id="searchBar">
                 <input type="text" placeholder="In CBS Mannheim suchen" id="searchBox">
                 <div id="buttonContainer">
