Fixed SVG (hopefully ^^)

--- a/vtour.html
+++ b/vtour.html
@@ -64,9 +64,9 @@
         </div>
     </main>
 
-    <object type="image/svg+xml" data="./svg/og1.svg" id="Map2D">
-        Woops :( Looks like your browser does not support SVGs. Please use and/or update Chrome or Firefox.
-    </object>
+    <div id="Map2dContainer" class="row">
+
+    </div>
 
     <!-- JQuery JS -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
