--- a/vtour.html
+++ b/vtour.html
@@ -22,7 +22,7 @@
             <div class="card z-depth-2 row" id="searchBar">
                 <input type="text" placeholder="In CBS Mannheim suchen" id="searchBox">
                 <div id="buttonContainer">
-                    <i class="fa fa-search" aria-hidden="true" title="Suchen"></i>
+                    <i class="fa fa-search" aria-hidden="true" title="Suchen" id="findElement"></i>
                     <i class="fa fa-location-arrow blue-text" title="Navigation" id="navBarOpen"></i>
                 </div>
             </div>
@@ -64,9 +64,7 @@
         </div>
     </main>
 
-    <div id="Map2dContainer" class="row">
-
-    </div>
+    <div id="Map2dContainer" class="row"></div>
 
     <!-- JQuery JS -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
