--- a/vtour.html
+++ b/vtour.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom css -->
     <link rel="stylesheet" href="css/vtour.css">
+    <!-- Toastr -->
+    <link href="./node_modules/toastr/build/toastr.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -68,13 +70,13 @@
 
     <!-- JQuery JS -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <!-- Main JS -->
-    <script src="./dist/vtour.bundle.js"></script>
-    <!-- Bootstrap core JS -->
-    <script src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
     <!-- Popper JS -->
     <script src="./node_modules/mdbootstrap/js/popper.min.js"></script>
+    <!-- Bootstrap core JS -->
+    <script src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
     <!-- Material Design Bootstrap JS -->
     <script src="./node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <!-- Main JS -->
+    <script src="./dist/vtour.bundle.js"></script>
 </body>
 </html>
