--- a/vtour.html
+++ b/vtour.html
@@ -60,7 +60,7 @@
         </div>
         <div id="floorSelector" class="card col">
             <div class="row"><i>2 OG</i></div>
-            <div class="row"><i>1 OG</i></div>
+            <div class="row clicked"><i>1 OG</i></div>
             <div class="row"><i>EG</i></div>
             <div class="row"><i>1 UG</i></div>
         </div>
