Looks like it's time to Oil up! 🍳

--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 
 
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <title>CBS </title>
+        <!-- JQuery JS -->
+        <script src="./node_modules/jquery/dist/jquery.js"></script>
+        <!-- Popper JS -->
+        <script src="./node_modules/mdbootstrap/js/popper.min.js"></script>
+        <!-- Bootstrap core JS -->
+        <script src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+        <!-- Material Design Bootstrap JS -->
+        <script src="./node_modules/mdbootstrap/js/mdb.min.js"></script>
+        <!-- Main JS -->
+        <script src="./dist/vtour.bundle.js"></script>
+        <script src="https://d3js.org/d3.v4.js"></script>
 
-        <!-- Favicon -->
-        <link rel="icon" href="./favicon.ico">
+        <script type="text/javascript">
+            var svg = document.getElementsByTagName('svg')[0]; //Get svg element
+            var newElement = document.createElementNS("http://www.w3.org/2000/svg", 'rect'); //Create a path in SVG's namespace
+            newElement.setAttribute("d","M 0 0 L 10 10"); //Set path's data
+            newElement.style.stroke = "#000"; //Set stroke colour
+            newElement.style.strokeWidth = "50px"; //Set stroke width
+            svg.appendChild(newElement);
 
-        <!-- Bootstrap core CSS -->
-        <link href="./node_modules/mdbootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <!-- Material Design Bootstrap CSS -->
-        <link href="./node_modules/mdbootstrap/css/mdb.min.css" rel="stylesheet">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <!-- Main CSS -->
-        <link rel="stylesheet" href="css/index.css">
+        </script>
 
 
     </head>
@@ -28,67 +32,11 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-transparent slideInDown animated">
-            <div class="container">
-                <a class="navbar-brand">
-                    <img src="./img/cbs_logo.png" height="30" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <svg  type="image/svg+xml"></svg>
 
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">Navigator</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#experience">Rundgang</a>
-                        </li>
-                    </ul>
-
-                    <ul class="nav navbar-nav ml-auto float-right">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">Entwickler</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#experience">Dokumentation</a>
-                        </li>
-                    </ul>
-
-                </div>
-                </div>
-            </div>
-        </nav>
-        <div id="hero" class="view hm-black-strong">
-            <div class="full-bg-img d-flex align-items-center justify-content-center">
-                <div class="col-lg-12">
-
-                    <div class="row justify-content-center d-flex">
-                        <div class="col-lg-7">
-                            <h5 class="display-3 font-bold white-text mb-5 fadeInDown animated text-center">Carl-Benz-Schule</h5>
-                            <hr class="hr-light wow fadeInDown animated">
-                            <h3 class="white-text wow fadeInDown animated text-center">Zukunft mit Technik</h3>
-                        </div>
-                    </div>
-
-
-
-                </div>
-            </div>
-        </div>
-
-    </header>
-
-
-        <!-- Main JS -->
-        <script src="./dist/index.bundle.js"></script>
-
-        <!-- Bootstrap core JS -->
-        <script src="./node_modules/mdbootstrap/js/bootstrap.min.js"/>
-        <!-- Material Design Bootstrap JS -->
-        <script src="./node_modules/mdbootstrap/js/mdb.min.js"/>
-
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <img x="0" y="0" src="svg/1%20OG.svg" />
 
     </body>
+
+
 </html>
